# context_engineering

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
context_engineering/: __init__.py  cli.py  compare_skills.py  engine.py  evaluators.py  loaders.py  models.py  operators.py  registries.py  run_experiments.py
context_engineering/examples/coding_bugfix/: gold.json  resources.json  rules.json  skills.json  tasks.json
context_engineering/examples/compliance_policy/: gold.json  resources.json  rules.json  skills.json  tasks.json
context_engineering/examples/paper_explanation/: gold.json  resources.json  rules.json  skills.json  tasks.json
context_engineering/examples/rag_doc_qa/: gold.json  resources.json  rules.json  skills.json  tasks.json
context_engineering/pipeline/: __init__.py  agent_ab.py  base.py  benchmark.py  metrics.py  multi_domain.py  operators.py  registry.py  state.py  stress_ab.py
docs/: ARCHITECTURE.md  EVALUATION.md  FINDINGS.md  MATH.md
docs/logs/: agent_ab_dryrun.txt  benchmark.txt  benchmark_results.json  compare_skills_rag.txt  results.json  run_experiments.txt
docs/logs/ab_results/: README.md  ab_hard.json  gpt4o_hard.json  hermes_easy.json  hermes_hard.json  nano_easy.json  nano_hard.json
docs/logs/stress/: efficiency_panel_gpt5.5.txt  multidomain_gpt5.5.json  multidomain_gpt5.5.txt  (+2 more)
tests/: conftest.py  test_agent_ab.py  test_benchmark.py  test_engine.py  test_evaluators.py  test_integration_domains.py  test_pipeline.py  test_retrieval.py  test_rules.py  test_skills.py  test_stress_harness.py
