[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "context-engineering"
version = "0.1.0"
description = "A small, extensible context-engineering framework: c = F_s(x, K_s, R_s, U, B)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
context-eng = "context_engineering.cli:main"

[tool.setuptools.packages.find]
include = ["context_engineering*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
